説明文更新とpdfリンク作成

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>む</h1>
+    <p>むです。とりあえず自分の作ったpdfを公開する場として用います。</p>
+    <a href="2func_thm_for_mfd.pdf">逆関数定理と陰関数定理</a>
 </body>
 
 </html>
