更新日時を書いた

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>む</h1>
     <p>むです。とりあえず自分の作ったpdfを公開する場として用います。</p>
     <a href="2func_thm_for_mfd.pdf">逆関数定理と陰関数定理</a>
+    <p>(最終更新: 2020/10/14 00:46)</p>
 </body>
 
 </html>
